--- a/profile_pla_n06.ini
+++ b/profile_pla_n06.ini
@@ -170,7 +170,7 @@ min_print_speed = 15
 min_skirt_length = 4
 mmu_segmented_region_interlocking_depth = 0
 mmu_segmented_region_max_width = 0
-notes = \n#1 - Arachne mode (Oct 21, 2023)\n#2 - Classic - avoid crossing peremiters (Oct 21, 2023)\n#3 - Increase bed temp from 60 to 65.   Increased first layer width from 0.65 to 0.95\n#4 - Increase first layer to 0.35, reduce # of bottom layers to 2. (reduces print time by 4 mins)\n#5 - Arachne.  Disable avoid crossing peremiters (no difference?)
+notes = \n#1 - Arachne mode (Oct 21, 2023)\n#2 - Classic - avoid crossing perimeters (Oct 21, 2023)\n#3 - Increase bed temp from 60 to 65.   Increased first layer width from 0.65 to 0.95\n#4 - Increase first layer to 0.35, reduce # of bottom layers to 2. (reduces print time by 4 mins)\n#5 - Arachne.  Disable avoid crossing perimeters (no difference?)
 nozzle_diameter = 0.6
 only_retract_when_crossing_perimeters = 0
 ooze_prevention = 0
